Name:                   HFuse
Version:                0.2.4.2
License:                BSD3
License-File:           LICENSE
Author:                 Jeremy Bobbio
Maintainer:             Montez Fitzpatrick <montezf@gmail.com>
Synopsis:               HFuse is a binding for the Linux FUSE library.
Description:            Bindings for the FUSE library, compatible with OSXFUSE and FreeBSD.
Homepage:               https://github.com/m15k/hfuse
Category:               System
Stability:              Experimental
Cabal-Version:          >= 1.6
Build-Type:             Simple
Extra-source-files:     README

Library
  Build-Depends:          base >= 4 && < 5, unix, bytestring
  exposed-Modules:        System.Fuse
  Extensions:             ForeignFunctionInterface ScopedTypeVariables EmptyDataDecls
  Includes:               dirent.h, fuse.h, fcntl.h
  Include-Dirs:           /usr/include, /usr/local/include, .
  if os(darwin)
      CC-Options:           "-DMACFUSE"
      Include-Dirs:           /usr/local/include/osxfuse
  else
      if os(freebsd) 
         Includes:           sys/param.h, sys/mount.h
         CC-Options:           "-Df_namelen=f_namemax"
      else
         Includes:               sys/statfs.h
  
  Extra-Libraries:        fuse
  Extra-Lib-Dirs:         /usr/local/lib
  CC-Options:             "-D_FILE_OFFSET_BITS=64"

source-repository head
    type:       git
    location:   https://github.com/m15k/hfuse.git
