Name:                   HFuse
Version:                0.2.4.3
License:                BSD3
License-File:           LICENSE
Author:                 Jeremy Bobbio
Maintainer:             Montez Fitzpatrick <montezf@gmail.com>
Synopsis:               HFuse is a binding for the Linux FUSE library.
Description:            Bindings for the FUSE library, compatible with Linux, OSXFUSE and FreeBSD.
Homepage:               https://github.com/m15k/hfuse
Category:               System
Stability:              Experimental
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-source-files:     
        CHANGELOG.md
        README.md

flag developer
  default: False

Library
  Build-Depends:          base >= 4 && < 5, unix, bytestring
  Pkgconfig-Depends:      fuse
  Exposed-Modules:        System.Fuse
  Extensions:             ForeignFunctionInterface ScopedTypeVariables EmptyDataDecls
  Includes:               dirent.h, fcntl.h
  Include-Dirs:           /usr/include, /usr/local/include, .
  if os(darwin)
      CC-Options:           "-DMACFUSE"
  else
      if os(freebsd)
         Includes:           sys/param.h, sys/mount.h
         CC-Options:           "-Df_namelen=f_namemax"
      else
         Includes:               sys/statfs.h

executable HelloFS
  if flag(developer)
    buildable: True
    build-depends:  base >= 4 && < 5, HFuse, unix, bytestring
  else
    buildable: False
  main-is: HelloFS.hs
  hs-source-dirs: examples
  ghc-options: -threaded
  default-language: Haskell2010

source-repository head
    type:       git
    location:   https://github.com/m15k/hfuse.git
